<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#782f40">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/header"
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:singleLine="false"
        android:textSize="10pt"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/btnText_spotify"
        android:id="@+id/button"
        android:textSize="@dimen/btnText_size"
        android:background="#ceb888"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:onClick="btnOnClick"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/btnText_scores"
        android:id="@+id/button2"
        android:textSize="@dimen/btnText_size"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="btnOnClick"
        android:background="#ceb888"
        android:layout_marginTop="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/btnText_BIB"
        android:id="@+id/button4"
        android:textSize="@dimen/btnText_size"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="btnOnClick"
        android:background="#ceb888"
        android:layout_marginTop="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/btnText_reader"
        android:id="@+id/button5"
        android:textSize="@dimen/btnText_size"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="btnOnClick"
        android:background="#ceb888"
        android:layout_marginTop="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/btnText_capstone"
        android:id="@+id/button6"
        android:textSize="@dimen/btnText_size"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="btnOnClick"
        android:background="#ceb888"
        android:layout_marginTop="@dimen/button_margin" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/btnText_library"
        android:id="@+id/button3"
        android:textSize="@dimen/btnText_size"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="btnOnClick"
        android:background="#ceb888"
        android:layout_marginTop="@dimen/button_margin" />

</RelativeLayout>